--- a/.gitignore
+++ b/.gitignore
@@ -11,15 +11,15 @@ sysinfo.txt
 # Visual Studio / MonoDevelop generated #
 # ===================================== #
 [Ee]xported[Oo]bj/
-*.userprefs
-*.csproj
-*.pidb
-*.suo
-*.sln*
-*.user
-*.userprefs
-*.unityproj
-*.booproj
+/*.userprefs
+/*.csproj
+/*.pidb
+/*.suo
+/*.sln*
+/*.user
+/*.userprefs
+/*.unityproj
+/*.booproj
  
 # ============ #
 # OS generated #
@@ -31,10 +31,6 @@ sysinfo.txt
 Icon?
 ehthumbs.db
 [Tt]humbs.db
-
-
-# Unity3D generated meta files
-*.pidb.meta
 
 # Unity3D Generated File On Crash Reports
 sysinfo.txt
